--- a/BookCDDVD_Project/BookCDDVD_Project.csproj
+++ b/BookCDDVD_Project/BookCDDVD_Project.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Book.cs" />
+    <Compile Include="Classes\BookCIS.cs" />
+    <Compile Include="Classes\DVD.cs" />
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\ProductDB.cs" />
     <Compile Include="Classes\ProductList.cs" />
