--- a/BookCDDVD_Project/BookCDDVD_Project.csproj
+++ b/BookCDDVD_Project/BookCDDVD_Project.csproj
@@ -48,21 +48,22 @@
   <ItemGroup>
     <Compile Include="Classes\Book.cs" />
     <Compile Include="Classes\BookCIS.cs" />
+    <Compile Include="Classes\CDClassical.cs" />
     <Compile Include="Classes\DVD.cs" />
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\ProductDB.cs" />
     <Compile Include="Classes\ProductList.cs" />
     <Compile Include="Classes\Validation.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="frmProduct.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmProduct.Designer.cs">
+      <DependentUpon>frmProduct.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmProduct.resx">
+      <DependentUpon>frmProduct.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
