--- a/BookCDDVD_Project/BookCDDVD_Project.csproj
+++ b/BookCDDVD_Project/BookCDDVD_Project.csproj
@@ -48,7 +48,9 @@
   <ItemGroup>
     <Compile Include="Classes\Book.cs" />
     <Compile Include="Classes\BookCIS.cs" />
+    <Compile Include="Classes\CDChamber.cs" />
     <Compile Include="Classes\CDClassical.cs" />
+    <Compile Include="Classes\CDOrchestra.cs" />
     <Compile Include="Classes\DVD.cs" />
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\ProductDB.cs" />
